<resources>
    <string name="app_name">TestYourMind</string>

    <string name="test_your_mind">Твой подсознательный страх (тест Нимана-Болда)</string>

    <string name="instruction">Тест был разработан двумя американскими психоаналитиками Джоном Ниманом и Эриком Болдом.
Ученые установили взаимосвязь между преобладанием одного из подсознательных страхов и лингвистической семантикой слов. Чтобы пройти тест нажмите кнопку <b>НАЧАТЬ</b> и выбирайте понравившееся слова.
        Для наиболее точного результата.</string>

    <string name="start">НАЧАТЬ</string>

    <string name="action_settings">Settings</string>

    <string name="choose_the_word">Выберите понравившееся слово</string>
    <string name="next">ДАЛЕЕ</string>

    <string name="from">из</string>

    <string name="secrets">Раскройте тайны своего подсознания</string>
    <string name="check_please">Вы не выбрали слово</string>

    <string name="try_again">ПРОЙТИ ТЕСТ ЕЩЕ РАЗ</string>

    <string name="exit_text">ВЫХОД</string>

    <string name="leave_text">Вы действительно хотите покинуть приложение?</string>

    <string name="btn_yes">ДА</string>

    <string name="btn_no">НЕТ</string>

    <string-array name="variants">
        <item>Кошка</item>
        <item>Ананас</item>
        <item>Диван</item>
        <item>Колесо</item>
        <item>Цветок</item>
        <item>Вера</item>
        <item>Жизнь</item>
        <item>Изгнание</item>
        <item>Соус</item>
        <item>Колокольчик</item>
        <item>Песня</item>
        <item>Весна</item>
        <item>Скука</item>
        <item>Вихрь</item>
        <item>Параллель</item>
        <item>Единство</item>
        <item>Право</item>
        <item>Красный</item>
        <item>Чашка</item>
        <item>Огонь</item>
        <item>Кровь</item>
        <item>Яд</item>
        <item>Затмение</item>
        <item>Море</item>
        <item>Зерно</item>
        <item>Академия</item>
        <item>Фортуна</item>
        <item>Совет</item>
        <item>Лень</item>
        <item>Ангина</item>
        <item>Круг</item>
        <item>Воздух</item>
        <item>Вершина</item>
        <item>Вода</item>
        <item>Лес</item>
        <item>Яблоко</item>
        <item>Череп</item>
        <item>Сон</item>
        <item>Пальма</item>
        <item>Гитара</item>
        <item>Диадема</item>
        <item>Стол</item>
        <item>Диван</item>
        <item>Колесо</item>
        <item>Флейта</item>
        <item>Помидор</item>
        <item>Синий</item>
        <item>Хижина</item>
        <item>Вождь</item>
        <item>Любовь</item>
        <item>Время</item>
        <item>Палитра</item>
        <item>Воля</item>
        <item>Боль</item>
        <item>Смерть</item>
        <item>Карандаш</item>
        <item>Марка</item>
        <item>Алмаз</item>
        <item>Праздник</item>
        <item>Багаж</item>
        <item>Лето</item>
        <item>Фантазия</item>
        <item>Всплеск</item>
        <item>Рыба</item>
        <item>Фальшь</item>
        <item>Грипп</item>
        <item>Лед</item>
        <item>Камень</item>
        <item>Костер</item>
        <item>Пряность</item>
        <item>Молитва</item>
        <item>Голос</item>
        <item>Зеленый</item>
        <item>Осень</item>
        <item>Брат</item>
        <item>Обед</item>
        <item>Сердце</item>
        <item>Зло</item>
        <item>Мастер</item>
        <item>Корень</item>
    </string-array>


    <string-array name="titles">
        <item>Аутоассассинофобия</item>
        <item>Гравидофобия</item>
        <item>Дентофобия</item>
        <item>Номофобия</item>
        <item>Филофобия</item>
        <item>Тетрафобия</item>
    </string-array>

    <string-array name="descriptions">
        <item>Боязнь самоубийства. На данный момент Вы испытываете сильный дискомфорт к жизни и всему что Вас окружает. Вы безуспешно пытаетесь убедить себя, что люди любят Вас
        и искренне хотят Вам помочь. Вы упорно пытаетесь поверить, что смерть слишком далеко. Самоубийство - Ваша навязчивая идея. Вы находитесь в непрерывном поиске причины жить и считаете, что
        друзья ценят и любят Вас, хотя глубоко в подсознании осознаете, что им все-равно. Лишь отвращение к своей собственной сущности и смирение поможет избежать стресса, который незаметно приносит
        каждый день Вашей жизни.</item>

        <item>Боязнь беременности или встречи с беременной. Если Вы женщина, знайте - беременность не принесет счастья, ведь любые Ваши мысли о продолжении рода заканчиваются либо стрессом либо самообманом. Если Вы мужчина, то не
            удивляйтесь - Вы четко осознаете последствия этого биологического процесса и, кроме того, прекрасно представляете себе все неприятное, что связывает женщину с вынашиванием плода
        (переменчивое настроение, токсикоз, проблемы со сном, а также сильные боли). Вам рекомендуется избегать мысли о беременности и встречи с будущими родителями любой ценой.</item>

         <item>Боязнь стоматологов. Если кресло зубного врача не всплывает в Ваших ночных кошмаров - это значит что собственное подсознание бережет Вас от стрессов. Неконтроллируемые приступы паники во время острой
             зубной боли - Ваше слабое место. Рекомендуется тщательно следить за состоянием своих зубов, так как каждый поход к стоматологу принесет гораздо больше вреда, чем пользы.</item>

         <item>Боязнь остаться без средств связи. Мобильный телефон в Ваших руках не только обычное средство связи. Это источник Вашего удовлетворения, осознания того, что в любой ситуации можно просто позвонить и мгновенно найти
         человека, который сможет справиться с проблемой. Отсутствие телефона или Интернета - настоящая пытка для Вашего подсознания, которая может вылиться в самые непредсказуемые последствия.</item>

         <item>Боязнь влюбиться. Отношения для Вас - самое настоящее испытание. Вы неоднократно задаетесь вопросом о том, что может связывать двух людей, заставляя их забыть обо всем на свете? Любовь в Вашей понимании
         постоянно меняет свое значение и ассоциируется с чем-то временным, непостоянным и непонятным. Все эти вопросы формируют устойчивый бессознательный страх перед отношениями, в которых присутствует </item>

         <item>Боязнь числа четыре. Если при прочтении результата Вы ощутили внутренний дискомфорт, значит Вам удалось принять правду, которую всеми силами пытается скрыть Ваше подсознание. Вы не одиноки в своем страхе.
         Число четыре не зря переводится с японского языка, как sin, что созвучно с японским словом "смерть". Избегайте этого числа любым способом, в противном случае, возможно развитие стресса
         параноидальной дипрессии.</item>

    </string-array>

</resources>
