<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/big_margin"
        android:paddingLeft="@dimen/big_margin"
        android:paddingRight="@dimen/big_margin"
        android:textStyle="bold"
        android:text = "@string/leave_text" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

    <Button
        android:id="@+id/btn_yes"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/ButtonStyle"
        android:text = "@string/btn_yes"/>

    <Button
        android:id="@+id/btn_no"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/ButtonStyle"
        android:text = "@string/btn_no"/>
    </LinearLayout>

</LinearLayout>